WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247472
REGRESSION(
255229@main
): Do not restore selection when changing input types
https://bugs.webkit.org/show_bug.cgi?id=247472
Summary
REGRESSION(255229@main): Do not restore selection when changing input types
Tim Nguyen (:ntim)
Reported
2022-11-03 18:41:08 PDT
rdar://101885601
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2022-11-03 18:48:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/6117
EWS
Comment 2
2022-11-04 09:34:47 PDT
Committed
256323@main
(6a72f93c2426): <
https://commits.webkit.org/256323@main
> Reviewed commits have been landed. Closing PR #6117 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug