REGRESSION(255229@main): Do not restore selection when changing input types https://bugs.webkit.org/show_bug.cgi?id=247472 rdar://101885601

Reviewed by Ryosuke Niwa.

Restoring selection range causes focusin events to fire, and allows the input type to be changed when the container is being recreated for a new input type.

* LayoutTests/fast/forms/change-input-type-during-setSelectionRange-crash-expected.txt: Added.
* LayoutTests/fast/forms/change-input-type-during-setSelectionRange-crash.html: Added.
* Source/WebCore/html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::createDataListDropdownIndicator):
(WebCore::TextFieldInputType::createContainer):
(WebCore::TextFieldInputType::updateAutoFillButton):
* Source/WebCore/html/TextFieldInputType.h:

Canonical link: https://commits.webkit.org/256323@main